--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script defer src="variable.js"></script>
     <script defer src="operator.js"></script>
+    <script defer src="function.js"></script>
 </head>
 <body>
     
