--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script defer src="variable.js"></script>
     <script defer src="operator.js"></script>
     <script defer src="function.js"></script>
+    <script defer src="class.js"></script>
 </head>
 <body>
     
